<resources>
    <string name="app_name">PaddleLite-android-demo</string>
    <!-- image classification settings -->
    <string name="ICS_CHOOSE_PRE_INSTALLED_MODEL_KEY">ICS_CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ICS_ENABLE_CUSTOM_SETTINGS_KEY">ICS_ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="ICS_MODEL_PATH_KEY">ICS_MODEL_PATH_KEY</string>
    <string name="ICS_LABEL_PATH_KEY">ICS_LABEL_PATH_KEY</string>
    <string name="ICS_IMAGE_PATH_KEY">ICS_IMAGE_PATH_KEY</string>
    <string name="ICS_CPU_THREAD_NUM_KEY">ICS_CPU_THREAD_NUM_KEY</string>
    <string name="ICS_CPU_POWER_MODE_KEY">ICS_CPU_POWER_MODE_KEY</string>
    <string name="ICS_INPUT_COLOR_FORMAT_KEY">ICS_INPUT_COLOR_FORMAT_KEY</string>
    <string name="ICS_INPUT_SHAPE_KEY">ICS_INPUT_SHAPE_KEY</string>
    <string name="ICS_INPUT_MEAN_KEY">ICS_INPUT_MEAN_KEY</string>
    <string name="ICS_INPUT_STD_KEY">ICS_INPUT_STD_KEY</string>
    <string name="ICS_MODEL_PATH_DEFAULT">image_classification/models/mobilenet_v1_for_cpu</string>
    <string name="ICS_LABEL_PATH_DEFAULT">image_classification/labels/synset_words.txt</string>
    <string name="ICS_IMAGE_PATH_DEFAULT">image_classification/images/tabby_cat.jpg</string>
    <string name="ICS_CPU_THREAD_NUM_DEFAULT">1</string>
    <string name="ICS_CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="ICS_INPUT_COLOR_FORMAT_DEFAULT">RGB</string>
    <string name="ICS_INPUT_SHAPE_DEFAULT">1,3,224,224</string>
    <string name="ICS_INPUT_MEAN_DEFAULT">0.485,0.456,0.406</string>
    <string name="ICS_INPUT_STD_DEFAULT">0.229,0.224,0.225</string>
    <!-- object detection settings -->
    <string name="ODS_CHOOSE_PRE_INSTALLED_MODEL_KEY">ODS_CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ODS_ENABLE_CUSTOM_SETTINGS_KEY">ODS_ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="ODS_MODEL_PATH_KEY">ODS_MODEL_PATH_KEY</string>
    <string name="ODS_LABEL_PATH_KEY">ODS_LABEL_PATH_KEY</string>
    <string name="ODS_IMAGE_PATH_KEY">ODS_IMAGE_PATH_KEY</string>
    <string name="ODS_CPU_THREAD_NUM_KEY">ODS_CPU_THREAD_NUM_KEY</string>
    <string name="ODS_CPU_POWER_MODE_KEY">ODS_CPU_POWER_MODE_KEY</string>
    <string name="ODS_INPUT_COLOR_FORMAT_KEY">ODS_INPUT_COLOR_FORMAT_KEY</string>
    <string name="ODS_INPUT_SHAPE_KEY">ODS_INPUT_SHAPE_KEY</string>
    <string name="ODS_INPUT_MEAN_KEY">ODS_INPUT_MEAN_KEY</string>
    <string name="ODS_INPUT_STD_KEY">ODS_INPUT_STD_KEY</string>
    <string name="ODS_SCORE_THRESHOLD_KEY">ODS_SCORE_THRESHOLD_KEY</string>
    <string name="ODS_MODEL_PATH_DEFAULT">object_detection/models/ssd_mobilenet_v1_pascalvoc_for_cpu</string>
    <string name="ODS_LABEL_PATH_DEFAULT">object_detection/labels/pascalvoc_label_list</string>
    <string name="ODS_IMAGE_PATH_DEFAULT">object_detection/images/dog.jpg</string>
    <string name="ODS_CPU_THREAD_NUM_DEFAULT">1</string>
    <string name="ODS_CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="ODS_INPUT_COLOR_FORMAT_DEFAULT">RGB</string>
    <string name="ODS_INPUT_SHAPE_DEFAULT">1,3,300,300</string>
    <string name="ODS_INPUT_MEAN_DEFAULT">0.5,0.5,0.5</string>
    <string name="ODS_INPUT_STD_DEFAULT">0.5,0.5,0.5</string>
    <string name="ODS_SCORE_THRESHOLD_DEFAULT">0.5</string>
</resources>

