<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="Model Settings">
        <ListPreference
                android:defaultValue="@string/ODS_MODEL_PATH_DEFAULT"
                android:key="@string/ODS_CHOOSE_PRE_INSTALLED_MODEL_KEY"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="Choose pre-installed models" />
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/ODS_ENABLE_CUSTOM_SETTINGS_KEY"
                android:summaryOn="Enable"
                android:summaryOff="Disable"
                android:title="Enable custom settings"/>
        <EditTextPreference
                android:key="@string/ODS_MODEL_PATH_KEY"
                android:defaultValue="@string/ODS_MODEL_PATH_DEFAULT"
                android:title="Model Path" />
        <EditTextPreference
                android:key="@string/ODS_LABEL_PATH_KEY"
                android:defaultValue="@string/ODS_LABEL_PATH_DEFAULT"
                android:title="Label Path" />
        <EditTextPreference
                android:key="@string/ODS_IMAGE_PATH_KEY"
                android:defaultValue="@string/ODS_IMAGE_PATH_DEFAULT"
                android:title="Image Path" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Input Settings">
        <CheckBoxPreference
                android:defaultValue="@string/ODS_ENABLE_RGB_COLOR_FORMAT_DEFAULT"
                android:key="@string/ODS_ENABLE_RGB_COLOR_FORMAT_KEY"
                android:summaryOn="Use RGB color format"
                android:summaryOff="Use BGR color format"
                android:title="Enable RGB color format"/>
        <EditTextPreference
                android:key="@string/ODS_INPUT_SHAPE_KEY"
                android:defaultValue="@string/ODS_INPUT_SHAPE_DEFAULT"
                android:title="Input Shape: (1,1,h,w) or (1,3,h,w)" />
        <EditTextPreference
                android:key="@string/ODS_INPUT_MEAN_KEY"
                android:defaultValue="@string/ODS_INPUT_MEAN_DEFAULT"
                android:title="Input Mean: (channel/255-mean)/std" />
        <EditTextPreference
                android:key="@string/ODS_INPUT_STD_KEY"
                android:defaultValue="@string/ODS_INPUT_STD_DEFAULT"
                android:title="Input Std: (channel/255-mean)/std" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Output Settings">
        <EditTextPreference
                android:key="@string/ODS_SCORE_THRESHOLD_KEY"
                android:defaultValue="@string/ODS_SCORE_THRESHOLD_DEFAULT"
                android:title="Score Threshold" />
    </PreferenceCategory>
</PreferenceScreen>
